--- a/AromaESabor/src/main/webapp/administrativo/produtos.html
+++ b/AromaESabor/src/main/webapp/administrativo/produtos.html
@@ -11,5 +11,29 @@
 		<iframe src="./menuAdm.html" width="100%" height="140px"
 			style="border: none;"></iframe>
 	</header>
+	<main>
+		<h1>Produtos Cadastrados</h1>
+		<table>
+			<thead>
+					<th>Nome</th>
+					<th>Descrição</th>
+					<th>Preço (R$)</th>
+					<th>Categoria</th>
+					<th>Editar</th>
+					<th>Excluir</th>
+				</tr>
+			</thead>
+			<tbody id="tabela-produtos">
+				<tr>
+					<td>Produto 1</td>
+					<td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur expedita rem aspernatur voluptates nam dolor quasi sit nesciunt</td>
+					<td>10,00</td>
+					<td>Categoria 1</td>
+					<td><button><img src="./img/edit-button.png"></button></td>
+					<td><button><img src="./img/deletar-button.png"></button></td>
+				</tr>
+			</tbody>
+		</table>
+	</main>
 </body>
 </html>
